<resources>
    <string name="app_name">DRC</string>
    <string name="back">Back</string>
    <string name="something_went_wrong">Something went wrong. Please try again</string>
    <string name="click_back_to_exit">Please click BACK button again to exit</string>
    <string name="internal_error">Some internal error occurred. Please try again later.</string>
    <string name="no_network_message">No Internet connection. Please try later!</string>
    <string name="request_timed_out_message">Unable to connect to server. Please check internet connection and try
        again.
    </string>
    <string name="server_error">Some server error occurred. Please try again later.</string>
    <string name="error_field_cant_blank">field can\'t blank</string>
    <string name="error_field_country_code">Please enter country code</string>
    <string name="error_field_cant_blank_address">Please enter additional details, it will help us to deliver the order</string>

    <string name="error_field_not_valid_email">email is not valid</string>
    <string name="error_password_min_length">password min length is %1$d</string>
    <string name="error_password_max_length">password should not greater than %1$d</string>
    <string name="error_password_not_match">password should be same as confirm password</string>


    <string name="please_wait">Please wait…</string>
    <string name="default_error_button_retry_text">Retry</string>

    <string name="error_view_default_title">Error</string>
    <string name="error_view_default_desc">There was an error processing the request. Please try again.</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="prompt_password">Password</string>
    <string name="ern_number">ERP Number</string>
    <string name="or">OR</string>
    <string name="forgotten_text">I\'ve forgotten my password!</string>
    <string name="new_user">New User? Sign Up</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="full_name">Full Name</string>
    <string name="apply_here">Apply here!</string>
    <string name="dont_have_an_ern_number">Don\'t have an ERP Number?</string>
    <string name="existing_user">Existing User? Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_password">Create Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address">Email Address</string>
    <string name="send_a_link">Send A Link</string>
    <string name="reset_desc">An email will be sent to your email address soon, please follow the instructions to reset your password.</string>
    <string name="title_activity_landing_navigation">LandingNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">More</string>
    <string name="orders">Orders</string>
    <string name="shop">Shop</string>
    <string name="available_type">Available Packs</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="product_cat">Product Categories</string>
    <string name="product">Product</string>

    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="select_an_offer">Select an offer</string>
    <string name="apply_offer">Apply offer</string>
    <string name="trade_offer">Trade Offer</string>
    <string name="details"><u>details</u></string>
    <string name="txt_clear">Clear all</string>
    <string name="txt_apply">Apply</string>
    <string name="filter_by">Filter By</string>
    <string name="buy">Buy</string>
    <string name="sort_by">Sort By</string>
    <string name="Popularity">Popularity</string>
    <string name="price_high_low">Price - High to Low</string>
    <string name="price_low_high">Price - Low to High</string>
    <string name="rating">Rating</string>
    <string name="promotions">Promotions</string>
    <string name="cancel">Cancel</string>
    <string name="in_stock">In stock</string>
    <string name="price_type">AED</string>
    <string name="per_can">*per can</string>
    <string name="order_id">Order Id</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="more_details">More details</string>
    <string name="track_order">Track order</string>
    <string name="payment_method">Payment Method</string>
    <string name="total">Total</string>
    <string name="Details"><u>Details</u></string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="on_the_way">On Your way</string>
    <string name="delivered">Delivered</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="pack_size">Pack Size</string>
    <string name="price">Price</string>
    <string name="shop_more">Shop More</string>
    <string name="have_coupons">Have a coupon code?</string>
    <string name="view_coupon">View Coupons</string>
    <string name="payment_details">Payment Details</string>
    <string name="total_item">Total Item</string>
    <string name="charges">Total Charges</string>
    <string name="grand_total">Grand Total</string>
    <string name="grand_total_">Grand Total:</string>
    <string name="buy_now">Buy now</string>
    <string name="enter_a_coupon_code">Enter a coupon code</string>
    <string name="apply">Apply</string>
    <string name="expires_on">Expires on:</string>
    <string name="date_generated">Date Generated</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="ok">Ok</string>
    <string name="alert">Alert</string>
    <string name="email_id">Email Id</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password*</string>
    <string name="new_password">New Password*</string>
    <string name="confirm_password_">Confirm Password*</string>
    <string name="my_profile">My Profile</string>
    <string name="my_invoice">My Invoices</string>
    <string name="my_credits">My Credits</string>
    <string name="aed">AED</string>
    <string name="add_credits">Add Credit</string>
    <string name="pay_credits">Pay Credit</string>
    <string name="dubai_refreshments">Dubai Refreshments</string>
    <string name="trade_offer_applied">Trade offer applied</string>
    <string name="logout">Logout</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="click_to_sign_in">CLICK TO SIGN IN</string>
    <string name="goto_orders">Go to Orders</string>
    <string name="order_placed">Order Placed</string>
    <string name="quantity">Quantity</string>
    <string name="order_list">Order List</string>
    <string name="please_select_pack">Please select pack</string>
    <string name="place_order">Place Order</string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="please_select_mode">Please select payment mode</string>
    <string name="order_date">Ordered Date</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="area_range">%1$sK€ - %2$sK€</string>
    <string name="order_details">Order Details</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="current">Current</string>
    <string name="Limit">Credit Limit</string>
    <string name="select_price_range">Select Price Range</string>
    <string name="please_select_division">Please select division</string>
    <string name="select_an_division">Select an division</string>
    <string name="submit">Submit</string>
    <string name="error_mobile_not_validation">Mobile number digits should be greater than 6  and less than 12</string>

    <string name="erp_validation">ERP number should be equal or greater then 6</string>
    <string name="selected_division">Selected division</string>
    <string name="error_password_not_validation"><![CDATA[Password should have !, @, #, $, & one of these special character]]></string>
    <string name="search_hint">Search Product</string>
    <string name="no_product_found">No product found</string>
    <string name="less_details">Less details</string>
    <string name="title_activity_adress">Map</string>
    <string name="access_token">pk.eyJ1IjoicGVwcy1kcmMiLCJhIjoiY2s5ZHowanR0MDBodTNubGhxbTJhdTR5OCJ9.aDJRjS6rD0MNT9jB6Kfx9A</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="selected_mobile">Mobile Number</string>
    <string name="amount_details">Amount Details</string>
    <string name="next">Next</string>
    <string name="step1">Select Address (Step1)</string>
    <string name="step2">Place Order (Step 2)</string>
    <string name="search_place">Search address</string>
    <string name="other_addresses">Apartment, Building, etc.</string>
    <string name="proceed">Proceed</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="settings">Settings</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="code">Code</string>
    <string name="view_more">View More</string>
    <string name="faq">FAQ</string>
    <string name="shipping_charge">Shipping Charges</string>
    <string name="guest">Guest</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="atoz">A-Z</string>
    <string name="ztoa">Z-A</string>
    <string name="vat_charges">VAT Charges</string>
    <string name="from">From</string>
    <string name="to">TO</string>
    <string name="shipped">Shipped</string>
    <string name="delivery_created">Delivery Created</string>
</resources>
