<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pepsidrc.ui.navigation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.pepsidrc.ui.navigation.ui.shop.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.pepsidrc.ui.navigation.ui.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/navigation_more"
        android:name="com.pepsidrc.ui.navigation.ui.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/fragment_more" />
</navigation>