<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"

    android:padding="@dimen/activity_padding"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:id="@+id/logo"
        app:layout_constraintVertical_chainStyle="packed"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/title"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"

        android:fontFamily="@font/roboto_medium"
        android:textAllCaps="true"
        android:textSize="@dimen/text_sp31"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/pink"
        android:text="@string/reset_password"
        />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:paddingStart="@dimen/padding3x4"
        android:paddingEnd="@dimen/padding3x4"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_regular"

        android:layout_marginTop="@dimen/margin5x3"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:animateLayoutChanges="@bool/show"
        app:layout_constraintBottom_toTopOf="@+id/tvDesc"
        android:drawablePadding="@dimen/margin5x2"
        android:background="@drawable/rounded_corners_app_grey_edittext_bg"
        android:hint="@string/email_address"
        android:singleLine="@bool/show"
        android:textColor="@color/pink"
        android:textSize="18sp" tools:ignore="UnusedAttribute"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tvDesc"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/btnSendALiknk"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/reset_desc"
        android:textSize="19sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:textColor="@color/grey"

        />



    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnSendALiknk"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin5x3"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="true"
        android:text="@string/send_a_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/rounded_corners_app_blue_button_bg"
        />


    <!--
        <include layout="@layout/progrss_layout"/>
    -->


</androidx.constraintlayout.widget.ConstraintLayout>