<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:background="@color/white"

    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:padding="@dimen/activity_padding"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        app:layout_constraintVertical_bias=".02"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/title"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintVertical_bias=".32"
        android:textAllCaps="true"
        android:textSize="@dimen/text_sp31"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/pink"
        android:text="@string/sign_up"
        />
    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:paddingStart="@dimen/padding3x4"
        android:paddingEnd="@dimen/padding3x4"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:animateLayoutChanges="@bool/show"
        app:layout_constraintVertical_bias=".04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawablePadding="@dimen/margin5x2"
        android:background="@drawable/rounded_corners_app_grey_edittext_bg"
        android:hint="@string/full_name"
        android:inputType="textCapSentences"
        android:singleLine="@bool/show"
        android:textColor="@color/pink"
        android:textSize="18sp" tools:ignore="UnusedAttribute"/>



    <EditText
        android:id="@+id/etUsernameSignUp"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:paddingStart="@dimen/padding3x4"
        android:paddingEnd="@dimen/padding3x4"
        android:layout_gravity="center"
        android:animateLayoutChanges="@bool/show"
        app:layout_constraintVertical_bias=".048"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toBottomOf="@+id/etFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawablePadding="@dimen/margin5x2"
        android:background="@drawable/rounded_corners_app_grey_edittext_bg"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:singleLine="@bool/show"
        android:textColor="@color/pink"
        android:textSize="18sp" tools:ignore="UnusedAttribute"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/zero"
        android:id="@+id/etPasswordsignUpTextInput"
        android:layout_height="wrap_content"
        app:passwordToggleDrawable="@drawable/password_visible_selector"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/margin5x4"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@+id/etUsernameSignUp"
        app:layout_constraintEnd_toEndOf="@+id/etUsernameSignUp"
        app:layout_constraintTop_toBottomOf="@+id/etUsernameSignUp"
        >
        <EditText
            android:id="@+id/etPasswordsignUp"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:paddingStart="@dimen/padding3x4"
            android:paddingEnd="@dimen/padding3x4"
            android:layout_gravity="center"
            android:animateLayoutChanges="@bool/show"
            android:background="@drawable/rounded_corners_app_grey_edittext_bg"
            android:drawablePadding="@dimen/margin5x2"
            android:fontFamily="@font/roboto_regular"

            android:hint="@string/create_password"
            android:maxLength="15"
            android:inputType="textPassword"
            android:singleLine="@bool/show"
            android:importantForAutofill="no"
            android:textColor="@color/pink"
            android:textSize="@dimen/text_sp18"
            tools:ignore="UnusedAttribute"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/zero"
        android:id="@+id/etConfirmPasswordTextInput"
        android:layout_height="wrap_content"
        app:passwordToggleDrawable="@drawable/password_visible_selector"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/margin5x4"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@+id/etPasswordsignUpTextInput"
        app:layout_constraintEnd_toEndOf="@+id/etPasswordsignUpTextInput"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordsignUpTextInput"
        >
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:paddingStart="@dimen/padding3x4"
            android:paddingEnd="@dimen/padding3x4"
            android:layout_gravity="center"
            android:animateLayoutChanges="@bool/show"
            android:background="@drawable/rounded_corners_app_grey_edittext_bg"
            android:drawablePadding="@dimen/margin5x2"
            android:fontFamily="@font/roboto_regular"

            android:hint="@string/confirm_password"
            android:maxLength="15"
            android:inputType="textPassword"
            android:singleLine="@bool/show"
            android:importantForAutofill="no"
            android:textColor="@color/pink"
            android:textSize="@dimen/text_sp18"
            tools:ignore="UnusedAttribute"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/zero"
        android:id="@+id/etERNNumberTextInput"
        android:layout_height="wrap_content"
        app:passwordToggleDrawable="@drawable/password_visible_selector"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/margin5x4"
        app:hintEnabled="false"
        android:visibility="gone"

        app:layout_constraintStart_toStartOf="@+id/etConfirmPasswordTextInput"
        app:layout_constraintEnd_toEndOf="@+id/etConfirmPasswordTextInput"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPasswordTextInput"

        >
        <EditText
            android:id="@+id/etErnNumber"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:paddingStart="@dimen/padding3x4"
            android:paddingEnd="@dimen/padding3x4"
            android:layout_gravity="center"

            android:animateLayoutChanges="@bool/show"
            android:background="@drawable/rounded_corners_app_grey_edittext_bg"
            android:drawablePadding="@dimen/margin5x2"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/ern_number"
            android:inputType="textPassword"
            android:singleLine="@bool/show"
            android:importantForAutofill="no"
            android:textColor="@color/pink"
            android:textSize="@dimen/text_sp18"
            tools:ignore="UnusedAttribute"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tvDontHaveAccount"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/dont_have_an_ern_number"
        android:textSize="15.8sp"
        android:visibility="gone"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@+id/etERNNumberTextInput"
        android:textColor="@color/grey_1"

        />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tvApplyHere"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/tvDontHaveAccount"
        android:text="@string/apply_here"
        android:layout_marginStart="5dp"
        android:textSize="15.8sp"
        android:visibility="gone"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@+id/etERNNumberTextInput"
        android:textColor="@color/pink"

        />


    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnSignUp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin5x3"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="true"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDontHaveAccount"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:fontFamily="@font/roboto_regular"
        android:background="@drawable/rounded_corners_app_blue_button_bg"
        />


    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tvExistingUSerSignIn"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/existing_user"
        android:textSize="15.8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        android:textColor="@color/black"

        />
    <!--
        <include layout="@layout/progrss_layout"/>
    -->


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>